tests/negative/resource_nested_resource.ora
resource TokenUnit = u256;

contract ResourceNestedResource {
    storage var balances: map<address, Resource<Resource<TokenUnit>>>;
}
